feat: balancear perguntas e desempate do quiz